added a heading before the radio tags

--- a/HTML projects/project 1/index.html
+++ b/HTML projects/project 1/index.html
@@ -28,12 +28,15 @@
         <label for="click_button">Click: </label>
         <input type="button" id="click_button" value="Click"><br>
         
-        <label for="male" >Male: </label>
-        <input type="radio" id="male" name="gender" value="Male"><br>
-        <label for="female" >Female: </label>
-        <input type="radio" id="female" name="gender" value="Female"><br>
-        <label for="other" >Other: </label>
-        <input type="radio" id="other" name="gender" value="Other"><br>
+        <p>
+            <h3>Gender</h3>
+            <label for="male" >Male: </label>
+            <input type="radio" id="male" name="gender" value="Male"><br>
+            <label for="female" >Female: </label>
+            <input type="radio" id="female" name="gender" value="Female"><br>
+            <label for="other" >Other: </label>
+            <input type="radio" id="other" name="gender" value="Other"><br>
+        </p>
 
         <label for="apple">Apple</label>
         <input type="checkbox" id="apple" name="fruit" value="Apple"><br>
